WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
321926
[LibWebRTC] Fix unsafe-buffer-usage-in-container warning in LibWebRTCSocket.cpp
https://bugs.webkit.org/show_bug.cgi?id=321926
Summary
[LibWebRTC] Fix unsafe-buffer-usage-in-container warning in LibWebRTCSocket.cpp
Diego Pino
Reported
2026-08-17 06:08:21 PDT
While building WPEWebKit with LibWebRTC: ``` In file included from /home/pwuser/webkit/WebKitBuild/WPE/Release/DerivedSources/WebKit/unified-sources/UnifiedSource-WebProcess-26.cpp:2: /home/pwuser/webkit/Source/WebKit/WebProcess/Network/webrtc/LibWebRTCSocket.cpp:90:28: error: the two-parameter std::span construction is unsafe as it can introduce mismatch between buffer size and the bound information [-Werror,-Wunsafe-buffer-usage-in-container] 90 | NotifyPacketReceived({ { data.data(), data.size() }, m_remoteAddress, packetTimestamp, ecn }); | ^ 1 error generated. [11657/11976] Building CXX object Source/WebKit/CMakeFiles/WebKit.dir///DerivedSources/WebKit/unified-sources/UnifiedSource-WebProcess-38.cpp.o ninja: build stopped: subcommand failed. ```
Attachments
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2026-08-17 06:09:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/71770
EWS
Comment 2
2026-08-18 00:46:30 PDT
Committed
319352@main
(ab28a079a8a7): <
https://commits.webkit.org/319352@main
> Reviewed commits have been landed. Closing PR #71770 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-08-18 00:47:12 PDT
<
rdar://problem/185185426
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug