[LibWebRTC] Fix unsafe-buffer-usage-in-container warning in LibWebRTCSocket.cpp https://bugs.webkit.org/show_bug.cgi?id=321926

Reviewed by Philippe Normand.

Pass 'data' directly to 'NotifyPacketReceived'.

* Source/WebKit/WebProcess/Network/webrtc/LibWebRTCSocket.cpp:
(WebKit::LibWebRTCSocket::signalReadPacket):

Canonical link: https://commits.webkit.org/319352@main